--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 </head>
-
+<h5 style="color:slategray;">Edriana Tanowidjaja</h5>
 <body>
     <h3 class="text-center mt-5">GitHub API</h3>
     <form id="gitHubForm"  class="mx-auto" style="width: 280px; text-align:center;">
