--- a/index.html
+++ b/index.html
@@ -24,9 +24,20 @@
     <p id="user_repos" class="mx-auto" style="width: 280px; text-align:center;"></p>
     <p id="language_info" class="mx-auto" style="width: 280px; text-align:center;"></p>
 
+<!--    &lt;!&ndash; The core Firebase JS SDK is always required and must be listed first &ndash;&gt;-->
+<!--    <script src="/__/firebase/8.6.2/firebase-app.js"></script>-->
+
+<!--    &lt;!&ndash; TODO: Add SDKs for Firebase products that you want to use-->
+<!--         https://firebase.google.com/docs/web/setup#available-libraries &ndash;&gt;-->
+<!--    <script src="/__/firebase/8.6.2/firebase-analytics.js"></script>-->
+
+<!--    &lt;!&ndash; Initialize Firebase &ndash;&gt;-->
+<!--    <script src="/__/firebase/init.js"></script>-->
+
     <!-- jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+
 
     <!-- my js file -->
     <script src="app.js"></script>
